--- a/00-course-homepage/index.html
+++ b/00-course-homepage/index.html
@@ -41,7 +41,8 @@
         Page last updated on October 2nd, 2020, by Rob Soltani
 
         <p style="text-align: center;">
-            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://ccps530.ru.rob.soltani.io/">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://ccps530.ru.rob.soltani.io/"
+                target="_blank">
                 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!" />
             </a>
