--- a/01-lab-1/index.html
+++ b/01-lab-1/index.html
@@ -337,7 +337,8 @@
         Page last updated on October 2nd, 2020, by Rob Soltani
 
         <p style="text-align: center;">
-            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://ccps530.ru.rob.soltani.io/lab1/">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://ccps530.ru.rob.soltani.io/lab1/"
+                target="_blank">
                 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!" />
             </a>
