Lab 3 read - Other Labs and Homepage Updated

--- a/00-course-homepage/index.html
+++ b/00-course-homepage/index.html
@@ -35,8 +35,9 @@
         <hr>
         <h1>Labs</h1>
         <ul>
-            <li><a href="lab1">Lab 1</a></li>
-            <li><a href="lab2">Lab 2</a></li>
+            <li><a href="lab1">Lab 1 - HTML</a></li>
+            <li><a href="lab2">Lab 2 - CSS</a></li>
+            <li><a href="lab3">Lab 3 - Bootstrap and jQuery</a></li>
         </ul>
         <hr>
 
