--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li><a href="lab2">Lab 2 - CSS</a></li>
             <li><a href="lab3">Lab 3 - Bootstrap and jQuery</a></li>
             <li><a href="lab4">Lab 4 - AJAX and DOM</a></li>
+            <li><a href="lab5">Lab 5 - JSON and DOM</a></li>
         </ul>
         <hr>
 
