--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li><a href="lab5">Lab 5 - JSON and DOM</a></li>
             <li><a href="https://ccps530-lab6.herokuapp.com/">Lab 6 - Express and NodeJS</a></li>
             <li><a href="https://ccps530-lab7.herokuapp.com/">Lab 7 - MongoDB</a></li>
+            <li><a href="https://ccps530-lab8.herokuapp.com/">Lab 8 - Express and MongoDB</a></li>
         </ul>
         <hr>
 
