Dashboard, Google Map, Search, and Recaptcha for sign in done

--- a/09-project/react-app/public/index.html
+++ b/09-project/react-app/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:100">
     <meta name="theme-color" content="#000000" />
+    <title>CCPS 530 - Project - Rob (Sohrab) Soltani</title>
     <meta
       name="description"
       content="Web site created using create-react-app"
