--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:100">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="00-course-homepage/css/styles.css" />
 </head>
 
 <body>
